--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@
 *.mp3 filter=lfs diff=lfs merge=lfs -text
 *.wav filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
+icon.png -filter -diff -merge text
